--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                 <color key="trackTintColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZq-S3-fWn">
-                                <rect key="frame" x="0.0" y="20" width="375" height="21"/>
+                                <rect key="frame" x="0.0" y="480" width="375" height="21"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="23q-Ef-G1f"/>
@@ -89,9 +89,12 @@
                                 <constraints>
                                     <constraint firstAttribute="height" constant="80" id="XCG-tr-dAF"/>
                                 </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="28"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="42"/>
                                 <state key="normal" title="👉">
                                     <color key="titleColor" red="1" green="1" blue="1" alpha="1" colorSpace="calibratedRGB"/>
+                                </state>
+                                <state key="disabled">
+                                    <color key="titleColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 </state>
                                 <connections>
                                     <segue destination="nhD-o7-srJ" kind="show" id="gwI-fi-e7N"/>
@@ -102,6 +105,7 @@
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
                             <constraint firstItem="C5M-M4-Sak" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="470-DD-7Xa"/>
+                            <constraint firstItem="gZq-S3-fWn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6HF-Qd-ru8"/>
                             <constraint firstAttribute="trailing" secondItem="lx0-SS-lNg" secondAttribute="trailing" id="7z5-fj-MYu"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="Ox4-w2-oTz" secondAttribute="bottom" constant="43" id="8VB-BN-b90"/>
                             <constraint firstItem="gZq-S3-fWn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="Gzr-pg-JfX"/>
@@ -109,9 +113,11 @@
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="C5M-M4-Sak" secondAttribute="bottom" constant="43" id="Hx1-oh-HUm"/>
                             <constraint firstItem="OOk-t2-LFN" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="KOm-G2-q2C"/>
                             <constraint firstItem="MDb-DT-yf2" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="Kit-SX-s9p"/>
+                            <constraint firstItem="lx0-SS-lNg" firstAttribute="top" secondItem="gZq-S3-fWn" secondAttribute="bottom" constant="43" id="Nhh-hi-Ev9"/>
                             <constraint firstItem="lx0-SS-lNg" firstAttribute="leading" secondItem="C5M-M4-Sak" secondAttribute="trailing" id="R7v-Fi-REy"/>
                             <constraint firstItem="OOk-t2-LFN" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="aS2-tu-gqZ"/>
                             <constraint firstItem="C5M-M4-Sak" firstAttribute="leading" secondItem="Ox4-w2-oTz" secondAttribute="trailing" id="dVI-Ox-rlO"/>
+                            <constraint firstAttribute="trailing" secondItem="gZq-S3-fWn" secondAttribute="trailing" id="dbu-qX-1Ma"/>
                             <constraint firstItem="MDb-DT-yf2" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="eUo-dZ-k6J"/>
                             <constraint firstItem="gZq-S3-fWn" firstAttribute="top" secondItem="MDb-DT-yf2" secondAttribute="bottom" constant="18" id="iaZ-eT-BRh"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="lx0-SS-lNg" secondAttribute="bottom" constant="43" id="lIn-ol-Pmy"/>
@@ -123,6 +129,11 @@
                         <variation key="default">
                             <mask key="subviews">
                                 <exclude reference="goi-cw-hF3"/>
+                            </mask>
+                            <mask key="constraints">
+                                <exclude reference="Gzr-pg-JfX"/>
+                                <exclude reference="iaZ-eT-BRh"/>
+                                <exclude reference="mxL-sB-Wfd"/>
                             </mask>
                         </variation>
                     </view>
