--- a/Camera/Base.lproj/Main.storyboard
+++ b/Camera/Base.lproj/Main.storyboard
@@ -46,7 +46,7 @@
                                 <color key="trackTintColor" red="0.99989169836044312" green="1" blue="0.99988096952438354" alpha="0.0" colorSpace="custom" customColorSpace="sRGB"/>
                             </progressView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="gZq-S3-fWn">
-                                <rect key="frame" x="0.0" y="480" width="375" height="21"/>
+                                <rect key="frame" x="0.0" y="20" width="375" height="21"/>
                                 <animations/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="21" id="23q-Ef-G1f"/>
@@ -104,6 +104,7 @@
                         <animations/>
                         <color key="backgroundColor" red="0.0" green="0.0" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
                         <constraints>
+                            <constraint firstItem="gZq-S3-fWn" firstAttribute="top" secondItem="MDb-DT-yf2" secondAttribute="bottom" constant="18" id="07f-xf-7mT"/>
                             <constraint firstItem="C5M-M4-Sak" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="470-DD-7Xa"/>
                             <constraint firstItem="gZq-S3-fWn" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="6HF-Qd-ru8"/>
                             <constraint firstAttribute="trailing" secondItem="lx0-SS-lNg" secondAttribute="trailing" id="7z5-fj-MYu"/>
@@ -134,6 +135,7 @@
                                 <exclude reference="Gzr-pg-JfX"/>
                                 <exclude reference="iaZ-eT-BRh"/>
                                 <exclude reference="mxL-sB-Wfd"/>
+                                <exclude reference="Nhh-hi-Ev9"/>
                             </mask>
                         </variation>
                     </view>
